update room sections

--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header id="intro">
-    
+
         <article class="fullheight">
             <div class="hgroup">
                 <h1>Landon Hotel</h1>
@@ -229,6 +229,11 @@
             </div>
         </article>
     </footer>
+    <script
+    src="https://code.jquery.com/jquery-3.1.1.js"
+    integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
+    crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
