prodaction site version + ScrollMagic animations

--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -230,9 +230,16 @@
         </article>
     </footer>
     <script
-    src="https://code.jquery.com/jquery-3.1.1.js"
-    integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
-    crossorigin="anonymous"></script>
+  src="https://code.jquery.com/jquery-2.1.1.js"
+  integrity="sha256-FA/0OOqu3gRvHOuidXnRbcmAWVcJORhz+pv3TX2+U6w="
+  crossorigin="anonymous"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.js"></script>
+  <!-- <script src="../../components/scripts/TweenMax.min.js"></script> -->
+  <!-- <script src="../../components/scripts/ScrollMagic.js"></script> -->
+  <!-- <script src="../../components/scripts/animation.gsap.js"></script> -->
+  <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script> -->
     <script src="js/script.js"></script>
 </body>
 
